--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -10,10 +10,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Boat Club Members <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/members">Boat Club Members <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Slip Assignments</a>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/addMember" >Add New Member</a>
       </li>
     </ul>
   </div>
