--- a/src/app/directory-entry/directory-entry.component.html
+++ b/src/app/directory-entry/directory-entry.component.html
@@ -18,7 +18,7 @@
         {{member.memberType}} <br/>
         <ul class="list-group">
           <li class="list-group-item"
-              *ngFor="let boat of member.memberBoats">
+              *ngFor="let boat of member.boatList">
             {{boat.boatName}}
           </li>
         </ul>
