--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,10 @@
         <a class="nav-link" routerLink="/members">Boat Club Members <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/addMember" >Add New Member</a>
+        <a class="nav-link" routerLink="/addMember">Add New Member</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/addBoat">Add New Boat</a>
       </li>
     </ul>
   </div>
