--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -16,6 +16,9 @@
         <a class="nav-link" routerLink="/addMember">Add New Member</a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" routerLink="/editMember">Edit Existing Member</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" routerLink="/addBoat">Add New Boat</a>
       </li>
     </ul>
