--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/addBoat">Add New Boat</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/editBoat">Edit Existing Boat</a>
+      </li>
     </ul>
   </div>
 </nav>
