--- a/src/app/member-form/member-form.component.html
+++ b/src/app/member-form/member-form.component.html
@@ -7,17 +7,15 @@
                class="form-control"
                id="firstName"
                name="firstName"
-               placeholder="Enter First Name"
-               required #firstName="ngModel">
-        <div [hidden]="!firstName.pristine" class="alert alert-danger">First Name is Required</div>
+               placeholder="Enter First Name (REQUIRED)"
+               required>
         <label for="lastName">Last Name</label>
         <input type="text" [(ngModel)]="member.lastName"
                class="form-control"
                id="lastName"
                name="lastName"
-               placeholder="Enter Last Name"
-               required #lastName="ngModel">
-        <div [hidden]="!lastName.pristine" class="alert alert-danger">Last Name is Required</div>
+               placeholder="Enter Last Name (REQUIRED)"
+               required>
 
         <label for="address">Address</label>
         <input type="text" [(ngModel)]="member.address"
@@ -52,9 +50,8 @@
                class="form-control"
                id="email"
                name="email"
-               placeholder="Enter Email Address"
-               required #email="ngModel">
-        <div [hidden]="!email.pristine" class="alert-danger alert">Email is Required</div>
+               placeholder="Enter Email Address (REQUIRED)"
+               required>
 
         <label for="spouseName">Spouse Name</label>
         <input type="text" [(ngModel)]="member.spouseName"
