Year Office Held
Adding year office held to forms & display

--- a/src/app/directory-entry/directory-entry.component.html
+++ b/src/app/directory-entry/directory-entry.component.html
@@ -15,6 +15,7 @@
         <span *ngIf="member.childrenNames"> {{member.childrenNames}} </span><br/>
         {{member.address}} <br/>
         {{member.memberType}} <br/>
+        <span *ngIf="member.officeType">{{member.officeType}}</span> <span *ngIf="member.yearOfficeHeld"> - {{ member.yearOfficeHeld }}</span>
         <ul class="list-group">
           <li class="list-group-item entry"
               *ngFor="let boat of member.boatList">
